syntax = "proto3";

option java_multiple_files = true;
package currencyconversion;


service Converter {
  rpc ConvertCurrency (ConvertRequest) returns (ConvertResponse) {}
}

message ConvertRequest {
  string base_currency = 1;
  string target_currency = 2;
  double amount = 3;
}

message ConvertResponse {
  double converted_amount = 1;
  string currency = 2;
  double service_fee = 3;
  double base_currency_service_fee = 4;
}

//    protoc \
//    --proto_path=src/main/proto \
//    --java_out=src/main/java \
//    --grpc-java_out=src/main/java \
//    src/main/proto/currency_converter.proto